# omi-notes

./: .env.example  LICENSE  README.md  cli.py  main.py  pyproject.toml
.github/workflows/: deployment_main.yml
.specs/: MAIN.md
systemd/: ominotes.ini  ominotes.service
templates/: default_prompt.txt  index.html  privacy.html  sheets.html  terms.html
